--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile project(':ZoomeImageView')
+    compile project(':ZoomImageView')
     compile 'com.android.support:appcompat-v7:24.0.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
 }
