--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,6 @@ dependencies {
     compile project(':ZoomImageView')
     compile 'com.android.support:appcompat-v7:24.0.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile files('libs/universal-image-loader-1.9.5.jar')
 }
