--- a/ZoomImageView/build.gradle
+++ b/ZoomImageView/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.0"
+    compileSdkVersion 25
+    buildToolsVersion '25.0.3'
 
     defaultConfig {
         minSdkVersion 8
-        targetSdkVersion 24
-        versionCode 4
-        versionName "1.2.0"
+        targetSdkVersion 25
+        versionCode 5
+        versionName "1.3.1"
     }
     buildTypes {
         release {
@@ -21,5 +21,4 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.android.support:support-v4:24.0.0'
 }
